# flawDetect

./: README.md
detectionServer/: pom.xml  testwxy.sql
detectionServer/src/main/java/: Application.java
detectionServer/src/main/java/com/detect/: Application.java
detectionServer/src/main/java/com/detect/config/: DataSourceConfig.java
detectionServer/src/main/java/com/detect/constant/: GlobalConstant.java
detectionServer/src/main/java/com/detect/controller/: DetectController.java  ExecuteController.java  navigateController.java
detectionServer/src/main/java/com/detect/counter/: Counter.java
detectionServer/src/main/java/com/detect/dao/: DetectMapper.java
detectionServer/src/main/java/com/detect/domain/: CameraBO.java  CameraDO.java  CameraVO.java  CtlBO.java  CtlDO.java  CtlVO.java  ExecBO.java  ExecDO.java  ExecVO.java  ListVO.java  ProcBO.java  ProcDO.java  (+5 more)
detectionServer/src/main/resources/: application.properties
detectionServer/src/main/resources/mapper/: mapper.xml
executor/: CMakeLists.txt  algorithm.cpp  algorithm.h  camera.cpp  camera.h  executor.cpp  executor.h  executorCtl.cpp  executorCtl.h  frame.cpp  frame.h  main.cpp  processor.cpp  processor.h  product.cpp  product.h  schedule.cpp  schedule.h
executor/command/: command.cpp  command.h  commandFactory.cpp  commandFactory.h  commandStartDefect.cpp  commandStartDefect.h  commandStartExecutor.cpp  commandStartExecutor.h  commandStopDefect.cpp  commandStopDefect.h  commandStopExecutor.cpp  commandStopExecutor.h
executor/util/: definition.h  thread.cpp  thread.h  utils.cpp  utils.h
(+11 files in other folders)
